force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__Field__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Field__c</fullName>
    <inlineHelpText>Select the field you want updated when the conditions are met.</inlineHelpText>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__TargetObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>Discount (%)</fullName>
            </value>
            <value>
                <fullName>Discount (Amt)</fullName>
            </value>
            <value>
                <fullName>Markup (%)</fullName>
            </value>
            <value>
                <fullName>Markup (Amt)</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
                <label>Target (%)</label>
            </value>
            <value>
                <fullName>Norm</fullName>
                <label>Norm (%)</label>
            </value>
            <value>
                <fullName>Floor</fullName>
                <label>Floor (%)</label>
            </value>
            <value>
                <fullName>Explanation</fullName>
            </value>
            <value>
                <fullName>SBQQ__Quantity__c</fullName>
            </value>
            <value>
                <fullName>Pricing_Tier__c</fullName>
            </value>
            <value>
                <fullName>RecurringUnitPrice__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__ListPrice__c</fullName>
            </value>
            <value>
                <fullName>Overage_Rate__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__NetPrice__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__DiscountSchedule__c</fullName>
            </value>
            <value>
                <fullName>Annual_Recurring_Revenue__c</fullName>
            </value>
            <value>
                <fullName>Minimum_Commitment__c</fullName>
            </value>
            <value>
                <fullName>Minimum_Commitment_Quantity__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__RegularPrice__c</fullName>
            </value>
            <value>
                <fullName>DiscountScheduleTemp__c</fullName>
            </value>
            <value>
                <fullName>CM_Discount_Total__c</fullName>
            </value>
            <value>
                <fullName>Total_Summed_Discount__c</fullName>
            </value>
            <value>
                <fullName>Total_Discount_Including_CM__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__SubscriptionPricing__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__NetTotal__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__SpecialPrice__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__SpecialPriceType__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__PricingMethod__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__BlockPrice__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>