force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__Order__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Order__c</fullName>
        <description>Number which determines the order in which multiple actions on a rule are executed.</description>
        <inlineHelpText>Number which determines the order in which multiple actions on a rule are executed.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>