force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__RuleLookupObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RuleLookupObject__c</fullName>
        <formula>TEXT(SBQQ__Rule__r.SBQQ__LookupObject__c)</formula>
        <label>Rule Lookup Object</label>
        <type>Text</type>
    </CustomField>