force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__RuleTargetsCalculator__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RuleTargetsCalculator__c</fullName>
        <formula>ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &apos;Calculator&apos;) || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &apos;Quote Line&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsCalculator</label>
        <type>Checkbox</type>
    </CustomField>