force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__SourceLookupField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SourceLookupField__c</fullName>
        <description>API Name of the field to return from the row matching the condition.</description>
        <inlineHelpText>API Name of the field to return from the row matching the condition.</inlineHelpText>
        <label>Source Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Value__c</fullName>
                </value>
                <value>
                    <fullName>Overage_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Upper_Bound__c</fullName>
                </value>
                <value>
                    <fullName>Pricing_Tier__c</fullName>
                </value>
                <value>
                    <fullName>List_Price__c</fullName>
                </value>
                <value>
                    <fullName>Minimum_Commitment__c</fullName>
                </value>
                <value>
                    <fullName>DiscountSchedule__c</fullName>
                </value>
                <value>
                    <fullName>Id</fullName>
                </value>
                <value>
                    <fullName>Minimum_Commitment_Quantity__c</fullName>
                </value>
                <value>
                    <fullName>RecurringUnitPrice__c</fullName>
                </value>
                <value>
                    <fullName>Special_Price_Type__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Price__c</fullName>
                </value>
                <value>
                    <fullName>License_Metric__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Schedule__c</fullName>
                </value>
                <value>
                    <fullName>RPA_Percent__c</fullName>
                </value>
                <value>
                    <fullName>Uplift_Factor__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ListPrice__c</fullName>
                </value>
                <value>
                    <fullName>Rate__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>