force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__ValueField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ValueField__c</fullName>
        <description>Name of the field that sources value for this action.</description>
        <inlineHelpText>If the value you want inserted is calculated in another Quote Line field, select the field here.</inlineHelpText>
        <label>Source Field</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>